<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">真心话大冒险</string>
    <string name="splash_text">默考文提示：说谎会长胖哦……</string>
    
    <!-- play page -->
    <string name="play">晃动手机开始！</string>
    <string name="checkbox_dirty_text">来点刺激的！</string>
    <string name="checkbox_dare_text">大冒险</string>
    <string name="checkbox_question_text">真心话</string>
    <string name="button_about">A</string>
    
    <!-- about page -->
    <string name="about_titlebar_text">关于</string>
    <string name="about_text_version">真心话大冒险   Android版1.04</string>
    <string name="about_thanks">感谢每一位使用本软件的用户朋友，尤其感谢点击广告的用户朋友！敬礼！</string>
    <string name="about_text_site"></string>
    <string name="about_text_copyright">默考文    版权所有</string>
    <string name="about_text_copyright_detail">Copyright © 2011 默考文 All Rights Reserved</string>
    
</resources>
