<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"  
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="#93663C">

	<ImageView 
		android:layout_width="180px" 
        android:layout_height="180px"
        android:id="@+id/imgLogo" 
        android:background="@drawable/logo120" 
		android:layout_gravity="center_horizontal"
        android:layout_marginTop="10px"
		></ImageView>
	
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="48px"
        android:text="@string/app_name"
        android:layout_gravity="center_horizontal"
        />
	
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="18px"
        android:text="@string/splash_text"
        android:layout_gravity="center_horizontal"
        />
	
	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="14px"
        android:layout_marginTop="120px"
        android:layout_gravity="center_horizontal"
        android:text="@string/about_text_copyright_detail"
        />

</LinearLayout>
