<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_play">


    <LinearLayout
        android:id="@+id/question_frame"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop = "true"
        >

        <TextView
            android:id="@+id/question"
            android:textSize="38sp"
            android:textStyle="bold"
            android:textColor="#111111"
            android:text="@string/play"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">
        </TextView>

    </LinearLayout>

    <!-- checkboxes -->
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/checkboxes_frame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above = "@+id/adLayout"
        android:layout_centerHorizontal="true"
        
        >

        <CheckBox
            android:text="@string/checkbox_dirty_text"
            android:id="@+id/checkbox_dirty"
            android:layout_width="300px"
            android:layout_height="50px"
            android:textSize="22px"
            android:textColor="#EEEEEE"
            >
        </CheckBox>

        <CheckBox
            android:text="@string/checkbox_dare_text"
            android:id="@+id/checkbox_dare"
            android:layout_width="300px"
            android:layout_height="50px"
            android:textSize="22px"
            android:textColor="#EEEEEE"
>
        </CheckBox>

        <CheckBox
            android:text="@string/checkbox_question_text"
            android:id="@+id/checkbox_question"
            android:layout_width="300px"
            android:layout_height="50px"
            android:textSize="22px"
            
            android:textColor="#EEEEEE"
            android:checked="true">
        </CheckBox>
        
       
    </LinearLayout>
    

     <LinearLayout
            android:id="@+id/adLayout"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
        />
</RelativeLayout>
